...
            android:textColor="@color/text_color"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextAlbumName"
            android:text="@string/labelAlbumName"/>

        <EditText
            android:id="@+id/editTextAlbumName"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextAlbumCover"
            app:layout_constraintTop_toBottomOf="@id/editTextAlbumName"
            android:text="@string/labelAlbumCover" />

        <EditText
            android:id="@+id/editTextAlbumCover"
            android:layout_width="0dp"
...
            android:textColor="@color/text_color"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAlbumCover"
            app:layout_constraintBottom_toTopOf="@id/editTextAlbumReleaseDate"
            android:text="@string/labelAlbumReleaseDate"
            />

        <EditText
            android:id="@+id/editTextAlbumReleaseDate"
            android:layout_width="0dp"
...
            android:text="@string/labelAlbumGenre"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAlbumReleaseDate"
            app:layout_constraintBottom_toTopOf="@id/genreList"
            />

        <Spinner
            android:id="@+id/genreList"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
            android:text="@string/labelAlbumRecord"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreList"
            app:layout_constraintBottom_toTopOf="@id/recordList"
            />


        <Spinner
            android:id="@+id/recordList"
            android:layout_width="0dp"
...
            android:text="@string/labelAlbumDescription"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recordList"
            app:layout_constraintBottom_toTopOf="@id/editTextAlbumDescription"
            />

        <EditText
            android:id="@+id/editTextAlbumDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
            android:gravity="top|start"
            android:textColorHint="@color/text_color"
            android:contentDescription="Album description comments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelDescription"
            app:layout_constraintBottom_toTopOf="@id/saveAlbum"
            />

        <Button
            android:id="@+id/saveAlbum"
            android:layout_width="0dp"
            android:layout_height="45dp"
...
